<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jonay.ecdh.MainActivity">

        <TextView
            android:id="@+id/public_key_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publickey"/>

        <TextView
            android:id="@+id/public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/public_key_title"/>

        <TextView
            android:id="@+id/private_key_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privatekey"
            android:layout_below="@id/public_key"/>

        <TextView
            android:id="@+id/private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/private_key_title"/>

        <TextView
            android:id="@+id/ecdh_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ecdh"
            android:layout_below="@id/private_key"/>

        <TextView
            android:id="@+id/ecdh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ecdh_title"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_regenerate"
            android:text="@string/regenerate"
            android:layout_below="@id/ecdh"/>

        <TextView
            android:id="@+id/ip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IPdestino"
            android:layout_below="@id/btn_regenerate"/>

        <EditText
            android:id="@+id/ip_address"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:hint="@string/IPintr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ip_title"/>

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EstablecerCon"
            android:layout_below="@id/ip_address"/>
    </RelativeLayout>
</ScrollView>